--- a/index.html
+++ b/index.html
@@ -2,9 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>JiSA Design—Home</title>
+    <!--Favicon-->
+<!--    <link rel="icon" type="image/png" href="assets/img/favicon.png"/>-->
+
+    <link rel="stylesheet" href="../css/index.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.4/dist/flowbite.min.css"/>
+    <!--Tailwind CDN-->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
+
+    <!--JQUERY-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- ICONS BOXICONS -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!--AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
+<section class="bg-black">
+    <div class="h-screen w-full">
+        <h1 class="text-9xl text-white">
+            HEY ITS ME
+        </h1>
 
+    </div>
+
+</section>
+
+<!-- GSAP -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+
+<!-- Flowbite CDN-->
+<script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
+
+<!-- Main JS -->
+<!--<script src="assets/js/main.js"></script>-->
+
+<!--&lt;!&ndash;Animations JS&ndash;&gt;-->
+<!--<script src="assets/js/animations.js"></script>-->
+
+<!--&lt;!&ndash;Back To Top Button JS&ndash;&gt;-->
+<!--<script src="assets/js/backToTop.js"></script>-->
+
+<!--AOS JS-->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<!--AOS INIT-->
+<script>
+    AOS.init({
+        once: true,
+    });
+</script>
 </body>
 </html>
