--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!--    <link rel="icon" type="image/png" href="assets/img/favicon.png"/>-->
 
     <link rel="stylesheet" href="fonts/inter.css"/>
+    <link rel="stylesheet" href="index.css"/>
 <!--    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.4/dist/flowbite.min.css"/>-->
     <!--    Tailwind CDN-->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -38,63 +39,93 @@
     <!--AOS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body >
+<body class="overflow-x-hidden">
+<!--Navbar-->
+<nav class="bg-white border-gray-200 dark:bg-gray-900">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-end mx-auto py-4 px-16 md:py-8">
+        <div class="w-auto block md:w-auto" id="navbar-default">
+            <ul class="font-medium text-md flex p-0 mt-0 flex-row md:space-x-8 md:text-xl md:border-0 md:bg-white">
+                <li class="pr-8">
+                    <a href="#about" class="block p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700">
+                        About
+                    </a>
+                </li>
+                <li class="pr-8">
+                    <a href="#projects" class="block text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700">
+                        Projects
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="mb-12 h-[3px] md:h-[5px] w-full bg-black mt-4 md:mb-0 md:mt-8"></div>
+    </div>
+</nav>
+
+
 <!--Landing section-->
-<section class="bg-green-200 h-screen items-center flex justify-center">
-    <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 lg:px-36">
-        <div class="mt-4 md:mt-0 ">
-            <div>
-                <h1 class="text-5xl tracking-tight font-extrabold text-gray-900 dark:text-white">
+<section>
+    <div class="-mt-[7.5rem] md:-mt-[8rem] h-screen w-screen items-center flex justify-center">
+        <div class="flex flex-col justify-center py-8 px-16 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2">
+            <div class="mt-8 sm:mt-16 md:mt-24">
+                <h1 class="text-[2rem] sm:text-[2.5rem] md:text-[4.166666666666667vw] tracking-tight font-extrabold">
                     Hey. &nbsp I'm<br>
                 </h1>
-                <h1 class="mb-4 text-8xl tracking-tight font-extrabold text-gray-900 dark:text-white">
+                <h1 class="mb-4 text-[5rem] sm:text-[5.5rem] md:mb-24 md:text-[8.88888888888889vw] tracking-tight font-extrabold">
                     Jonathan
                 </h1>
+                <a class="hidden md:block" href="#about">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#005bef" class="transition ease-in-out duration-300 delay-100 hover:translate-y-10 -ml-14 h-32">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25L12 21m0 0l-3.75-3.75M12 21V3" />
+                    </svg>
+                </a>
             </div>
+            <img class="w-[25rem] sm:w-[25rem] md:w-[50rem] md:mt-24 dark:hidden" src="images/landingImage.png" alt="profile image">
+
         </div>
-        <img class="w-full dark:hidden" src="images/heroImage.png" alt="profile image">
-
     </div>
-
-
 </section>
 
 <!--About section-->
-<section class="bg-white h-screen w-screen flex items-center justify-center">
-    <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
+<section class="bg-[#005bef] h-screen w-screen flex items-center justify-center" id="about">
+    <div class="flex flex-col justify-center gap-2 md:gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16">
         <div class="" data-aos="fade-right" data-aos-duration="1500">
-            <a href="">
-                <img class="w-10/12" src="images/heroImage.png" alt="dashboard image">
-            </a>
+            <img class="w-[15rem] sm:w-[15rem] md:w-full" src="images/heroImage.png" alt="dashboard image">
         </div>
         <div data-aos="fade-right" data-aos-duration="1500" class="mt-4 md:mt-0">
-            <h1 class="mb-4 text-7xl tracking-tight font-extrabold">
+<!--            text-[4rem] lg:text-[4.5rem] xl:text-[5rem]-->
+            <h1 class="text-[#f4f4f4] text-center md:text-left text-[2.5rem] md:text-[3rem] lg:text-[6vw] tracking-tight font-extrabold">
                 Jonathan Zhu
             </h1>
-            <h3 class="mb-4 text-3xl tracking-tight font-extrabold">
+<!--            text-[1.2rem] lg:text-[1.4rem] xl:text-[1.8rem]-->
+            <h3 class="text-[#f4f4f4] text-center md:text-left mb-4 tracking-tight text-[1.1rem] md:text-[2rem] lg:text-[2vw] font-extrabold">
                 Student at Colonel By Secondary School
             </h3>
-            <p class="text-justify mb-6 font-normal text-gray-600 md:text-lg">
-                We help design and create design logos, products, and other illustrations
-                to help companies visualize their future, elevate their content visually,
-                and develop a fitting and aesthetic identity to boost audience engagement.
-                We aim to help businesses become more coherent brands through visual design.
+<!--            text-[0.8rem] lg:text-[1rem]-->
+            <p class="text-[#f4f4f4] px-24 md:px-0 text-justify mb-6 font-normal text-[0.8rem] md:text-[0.5rem] lg:text-[1.2vw]">
+                I am a driven and self-motivated individual who is interested in everything tech related, especially game development
+                and game design. I aspire to become a game developer/concept artist.
+                <br>
+                <br>
+                In my spare time, I enjoy solving programming problems in an efficient manner, learning about different programming
+                algorithms and data structures, and working on my own games. Aside from coding related activities, I like drawing (digitally
+                and traditionally on paper) and playing sports, such as tennis, badminton, ultimate
+                frisbee and volleyball.
             </p>
-            <div class="flex flex-row space-x-8 align-middle">
+            <div class="flex justify-center md:justify-start flex-row space-x-8 align-middle">
 <!--                <img class="w-14 h-14 rounded-full" src="images/profile.JPG" alt="profile picture">-->
                 <a href="" target="_blank" class="flex items-center justify-center space-x-2 group">
-                    <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24" class="fill-slate-600 group-hover:fill-slate-900 w-6 h-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24" class="fill-[#f4f4f4] group-hover:fill-[#ffdd18] w-6 h-6">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.463 2 11.97c0 4.404 2.865 8.14 6.839 9.458.5.092.682-.216.682-.48 0-.236-.008-.864-.013-1.695-2.782.602-3.369-1.337-3.369-1.337-.454-1.151-1.11-1.458-1.11-1.458-.908-.618.069-.606.069-.606 1.003.07 1.531 1.027 1.531 1.027.892 1.524 2.341 1.084 2.91.828.092-.643.35-1.083.636-1.332-2.22-.251-4.555-1.107-4.555-4.927 0-1.088.39-1.979 1.029-2.675-.103-.252-.446-1.266.098-2.638 0 0 .84-.268 2.75 1.022A9.607 9.607 0 0 1 12 6.82c.85.004 1.705.114 2.504.336 1.909-1.29 2.747-1.022 2.747-1.022.546 1.372.202 2.386.1 2.638.64.696 1.028 1.587 1.028 2.675 0 3.83-2.339 4.673-4.566 4.92.359.307.678.915.678 1.846 0 1.332-.012 2.407-.012 2.734 0 .267.18.577.688.48 3.97-1.32 6.833-5.054 6.833-9.458C22 6.463 17.522 2 12 2Z"></path>
                     </svg>
-                    <p class="text-slate-600 group-hover:text-slate-900 text-base font-medium">
+                    <p class="text-[#f4f4f4] group-hover:text-[#ffdd18] text-base font-medium">
                         GitHub
                     </p>
                 </a>
                 <a href="" target="_blank" class="flex items-center justify-center space-x-2 group">
-                    <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24" class="fill-slate-600 group-hover:fill-slate-900 w-6 h-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24" class="fill-[#f4f4f4] group-hover:fill-[#ffdd18] w-6 h-6">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z"></path>
                     </svg>
-                    <p class="text-slate-600 group-hover:text-slate-900 text-base font-medium">
+                    <p class="text-[#f4f4f4] group-hover:text-[#ffdd18] text-base font-medium">
                         LinkedIn
                     </p>
                 </a>
@@ -104,7 +135,7 @@
 </section>
 
 <!--Projects section-->
-<section class="mr-[13vw] ml-[13vw]">
+<section class="mr-[13vw] ml-[13vw]" id="projects">
     <div data-aos="fade-up" data-aos-duration="1000" class="flex inline-flex my-16">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.2" stroke="currentColor"
              class="w-8 h-8 mr-8 text-slate-900">
@@ -117,8 +148,8 @@
     <div class="flex flex-col justify-center items-center lg:justify-start lg:items-start lg:grid lg:grid-cols-2 lg:gap-16">
         <div class="flex flex-col mx-1 items-center justify-center">
             <a href="https://github.com/jiasunzhu613/Minesweeper" target="_blank">
-                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-                    <img class="rounded-t-lg" src="images/minesweeper.jpeg" alt="" />
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow dark:bg-gray-800 dark:border-gray-700">
+                    <img class="rounded-t-md" src="images/minesweeper.jpeg" alt="" />
                     <div class="p-5">
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                             Minesweeper
@@ -130,8 +161,8 @@
                 </div>
             </a>
             <a href="https://dmoj.ca/user/jzhu19/solved" target="_blank">
-                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-                    <img class="rounded-t-lg" src="images/graph_theory.jpg" alt="" />
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow dark:bg-gray-800 dark:border-gray-700">
+                    <img class="rounded-t-md" src="images/graph_theory.jpg" alt="" />
                     <div class="p-5">
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                             Competitive Programming
@@ -145,8 +176,8 @@
         </div>
         <div class="flex flex-col mx-1 items-center justify-center lg:mt-16">
             <a href="https://github.com/pasindu651/Digio-Job-Finder" target="_blank">
-                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-                    <img class="rounded-t-lg" src="images/digio.jpeg" alt="" />
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow dark:bg-gray-800 dark:border-gray-700">
+                    <img class="rounded-t-md" src="images/digio.jpeg" alt="" />
                     <div class="p-5">
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
                             Digio Job Finder
