Removed custom dark mode css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body class="overflow-x-hidden">
 <!--Navbar-->
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="bg-white border-gray-200">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-end mx-auto py-4 px-16 md:py-8">
         <div class="w-auto block md:w-auto" id="navbar-default">
             <ul class="font-medium text-md flex p-0 mt-0 flex-row md:space-x-8 md:text-xl md:border-0 md:bg-white">
@@ -71,7 +71,7 @@
                     </svg>
                 </a>
             </div>
-            <img data-aos="fade-right" data-aos-duration="1500" class="w-[25rem] sm:w-[25rem] md:w-[50rem] md:mt-24 dark:hidden" src="images/landingImage.png" alt="profile image">
+            <img data-aos="fade-right" data-aos-duration="1500" class="w-[25rem] sm:w-[25rem] md:w-[50rem] md:mt-24" src="images/landingImage.png" alt="profile image">
         </div>
     </div>
 </section>
@@ -135,26 +135,26 @@
     <div data-aos="fade-up" data-aos-duration="1500" class="flex flex-col justify-center items-center lg:justify-start lg:items-start lg:grid lg:grid-cols-2 lg:gap-16">
         <div class="flex flex-col mx-1 items-center justify-center">
             <a href="https://github.com/jiasunzhu613/Minesweeper" target="_blank">
-                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow dark:bg-gray-800 dark:border-gray-700">
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
                     <img class="rounded-t-md" src="images/minesweeper.jpeg" alt="" />
                     <div class="p-5">
-                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">
                             Minesweeper
                         </h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                        <p class="mb-3 font-normal text-gray-700 ">
                             💣 A Java clone of the classic video game: Minesweeper
                         </p>
                     </div>
                 </div>
             </a>
             <a href="https://dmoj.ca/user/jzhu19/solved" target="_blank">
-                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow dark:bg-gray-800 dark:border-gray-700">
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
                     <img class="rounded-t-md" src="images/graph_theory.jpg" alt="" />
                     <div class="p-5">
-                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">
                             Competitive Programming
                         </h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                        <p class="mb-3 font-normal text-gray-700 ">
                             View the various problems I've solves on the DMOJ competitive progamming platform
                         </p>
                     </div>
@@ -163,7 +163,7 @@
         </div>
         <div class="flex flex-col mx-1 items-center justify-center lg:mt-16">
             <a href="https://devpost.com/software/digio" target="_blank">
-                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow dark:bg-gray-800 dark:border-gray-700">
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
                     <img class="rounded-t-md" src="images/digio.jpeg" alt="" />
                     <div class="p-5">
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
@@ -172,7 +172,7 @@
                         <h5 class="mb-2 text-base font-normal tracking-tight text-gray-900">
                             Created in collaboration with <a class="font-bold hover:underline" href="https://ca.linkedin.com/in/pasindu-danthanarayana-9a38b118a" target="_blank">Pasindu D</a>
                         </h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                        <p class="mb-3 font-normal text-gray-700 ">
                             A Web App built for Power Up Hacks 2022 that makes finding jobs easier with Django, Python, HTML, and CSS.
                         </p>
                     </div>
