--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Jonathan Zhu</title>
 
     <link rel="stylesheet" href="fonts/inter.css"/>
@@ -33,9 +35,9 @@
 </head>
 <body class="overflow-x-hidden">
 <!--Navbar-->
-<nav class="bg-white border-gray-200">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-end mx-auto py-4 px-16 md:py-8">
-        <div class="w-auto block md:w-auto" id="navbar-default">
+<nav class="z-40 top-0 static border-gray-200">
+    <div class="flex flex-wrap items-center justify-end mx-[5vw] py-4 px-16 md:py-8">
+        <div class="w-auto block" id="navbar-default">
             <ul class="font-medium text-md flex p-0 mt-0 flex-row md:space-x-8 md:text-xl md:border-0 md:bg-white">
                 <li data-aos="fade-up" data-aos-duration="800" class="pr-8">
                     <a href="#about" class="block p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700">
@@ -55,9 +57,10 @@
 
 
 <!--Landing section-->
-<section>
-    <div class="-mt-[7.5rem] md:-mt-[8rem] h-screen w-screen items-center flex justify-center">
-        <div class="flex flex-col justify-center py-8 px-16 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2">
+<section class="relative">
+<!--    -mt-[7.5vw] md:-mt-[8vw]-->
+    <div class="h-screen w-screen items-center flex justify-center">
+        <div class="flex flex-col justify-center py-8 px-16 mx-[5vw] xl:gap-16 md:grid md:grid-cols-2">
             <div class="mt-8 sm:mt-16 md:mt-24">
                 <h1 data-aos="fade-right" data-aos-duration="1500" class="text-[2rem] sm:text-[2.5rem] md:text-[4.166666666666667vw] tracking-tight font-extrabold">
                     Hey. &nbsp I'm<br>
@@ -71,25 +74,27 @@
                     </svg>
                 </a>
             </div>
-            <img data-aos="fade-right" data-aos-duration="1500" class="w-[25rem] sm:w-[25rem] md:w-[50rem] md:mt-24" src="images/landingImage.png" alt="profile image">
+            <div class="flex justify-center items-center align-middle">
+                <img data-aos="fade-right" data-aos-duration="1500" class="w-[25rem] sm:w-[25rem] md:w-[50vw]" src="images/landingImage.png" alt="profile image">
+            </div>
         </div>
     </div>
 </section>
 
 <!--About section-->
 <section class="bg-[#005bef] h-screen w-screen flex items-center justify-center" id="about">
-    <div class="flex flex-col justify-center gap-2 md:gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16">
-        <div class="" data-aos="fade-right" data-aos-duration="1500">
-            <img class="w-[15rem] sm:w-[15rem] md:w-full" src="images/heroImage.png" alt="dashboard image">
+    <div class="flex flex-col justify-center gap-2 md:gap-8 items-center py-8 px-4 mx-[5vw] xl:gap-16 md:grid md:grid-cols-2 sm:py-16">
+        <div class="flex justify-center items-center align-middle" data-aos="fade-right" data-aos-duration="1500">
+            <img class="w-[15rem] sm:w-[15rem] md:w-10/12" src="images/heroImage.png" alt="dashboard image">
         </div>
         <div data-aos="fade-right" data-aos-duration="1500" class="mt-4 md:mt-0">
             <h1 class="text-[#f4f4f4] text-center md:text-left text-[2.5rem] md:text-[3rem] lg:text-[6vw] tracking-tight font-extrabold">
                 Jonathan Zhu
             </h1>
-            <h3 class="text-[#f4f4f4] text-center md:text-left mb-4 tracking-tight text-[1.1rem] md:text-[2rem] lg:text-[2vw] font-extrabold">
+            <h3 class="text-[#f4f4f4] text-center md:text-left mb-4 tracking-tight text-[1.1rem] md:text-[1.2rem] lg:text-[2vw] font-extrabold">
                 Student at Colonel By Secondary School
             </h3>
-            <p class="text-[#f4f4f4] px-24 md:px-0 text-justify mb-6 font-normal text-[0.8rem] md:text-[0.5rem] lg:text-[1.2vw]">
+            <p class="text-[#f4f4f4] px-[2vw] md:px-0 text-justify mb-6 font-normal text-[0.6rem] md:text-[0.9rem] lg:text-[1.2vw]">
                 I am a driven and self-motivated individual who is interested in everything tech related, especially game development
                 and game design. I aspire to become a game developer/concept artist.
                 <br>
