--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 Jonathan Zhu
             </h1>
             <h3 class="text-[#f4f4f4] text-center md:text-left mb-4 tracking-tight text-[1.1rem] md:text-[1.2rem] lg:text-[2vw] font-extrabold">
-                Student at Colonel By Secondary School
+                Student at the University of Toronto
             </h3>
             <p class="text-[#f4f4f4] px-[2vw] md:px-0 text-justify mb-6 font-normal text-[0.6rem] md:text-[0.9rem] lg:text-[1.2vw]">
                 I am a driven and self-motivated individual who is interested in everything tech related, especially game development
@@ -105,7 +105,7 @@
                 frisbee and volleyball.
             </p>
             <div class="flex justify-center md:justify-start flex-row space-x-8 align-middle">
-                <a href="" target="_blank" class="flex items-center justify-center space-x-2 group">
+                <a href="https://github.com/jiasunzhu613" target="_blank" class="flex items-center justify-center space-x-2 group">
                     <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24" class="fill-[#f4f4f4] group-hover:fill-[#ffdd18] w-6 h-6">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.463 2 11.97c0 4.404 2.865 8.14 6.839 9.458.5.092.682-.216.682-.48 0-.236-.008-.864-.013-1.695-2.782.602-3.369-1.337-3.369-1.337-.454-1.151-1.11-1.458-1.11-1.458-.908-.618.069-.606.069-.606 1.003.07 1.531 1.027 1.531 1.027.892 1.524 2.341 1.084 2.91.828.092-.643.35-1.083.636-1.332-2.22-.251-4.555-1.107-4.555-4.927 0-1.088.39-1.979 1.029-2.675-.103-.252-.446-1.266.098-2.638 0 0 .84-.268 2.75 1.022A9.607 9.607 0 0 1 12 6.82c.85.004 1.705.114 2.504.336 1.909-1.29 2.747-1.022 2.747-1.022.546 1.372.202 2.386.1 2.638.64.696 1.028 1.587 1.028 2.675 0 3.83-2.339 4.673-4.566 4.92.359.307.678.915.678 1.846 0 1.332-.012 2.407-.012 2.734 0 .267.18.577.688.48 3.97-1.32 6.833-5.054 6.833-9.458C22 6.463 17.522 2 12 2Z"></path>
                     </svg>
@@ -113,7 +113,7 @@
                         GitHub
                     </p>
                 </a>
-                <a href="" target="_blank" class="flex items-center justify-center space-x-2 group">
+                <a href="https://www.linkedin.com/in/zhu-jonathan/" target="_blank" class="flex items-center justify-center space-x-2 group">
                     <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 24 24" class="fill-[#f4f4f4] group-hover:fill-[#ffdd18] w-6 h-6">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z"></path>
                     </svg>
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://dmoj.ca/user/jzhu19/solved" target="_blank">
+            <a href="https://dmoj.ca/user/Rebirth/solved" target="_blank">
                 <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
                     <img class="rounded-t-md" src="images/graph_theory.jpg" alt="" />
                     <div class="p-5">
@@ -160,7 +160,7 @@
                             Competitive Programming
                         </h5>
                         <p class="mb-3 font-normal text-gray-700 ">
-                            View the various problems I've solves on the DMOJ competitive progamming platform
+                            View the various problems I've solved on the DMOJ competitive progamming platform
                         </p>
                     </div>
                 </div>
@@ -179,6 +179,19 @@
                         </h5>
                         <p class="mb-3 font-normal text-gray-700 ">
                             A Web App built for Power Up Hacks 2022 that makes finding jobs easier with Django, Python, HTML, and CSS.
+                        </p>
+                    </div>
+                </div>
+            </a>
+            <a href="https://github.com/jiasunzhu613/mern-food-distribution-app" target="_blank">
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
+                    <img class="rounded-t-md" src="images/digio.jpeg" alt="" />
+                    <div class="p-5">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
+                            Food Distribution Web App
+                        </h5>
+                        <p class="mb-3 font-normal text-gray-700 ">
+                            A Web App built to connect food donation donors and recipients easier
                         </p>
                     </div>
                 </div>
