--- a/index.html
+++ b/index.html
@@ -152,6 +152,19 @@
                     </div>
                 </div>
             </a>
+            <a href="files/research_paper.pdf" target="_blank">
+                <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
+                    <img class="rounded-t-md" src="images/bit-query.png" alt="" />
+                    <div class="p-5">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">
+                            Optimizing Subarray Comparisons With Array Value Updates
+                        </h5>
+                        <p class="mb-3 font-normal text-gray-700 ">
+                            Take a look at how I developed a solution to optimize subarray comparisons using range query data structures
+                        </p>
+                    </div>
+                </div>
+            </a>
             <a href="https://dmoj.ca/user/Rebirth/solved" target="_blank">
                 <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
                     <img class="rounded-t-md" src="images/graph_theory.jpg" alt="" />
@@ -185,7 +198,7 @@
             </a>
             <a href="https://github.com/jiasunzhu613/mern-food-distribution-app" target="_blank">
                 <div class="mb-24 hover:scale-110 transition ease-in-out duration-300 delay-100 max-w-sm bg-white border border-gray-200 rounded-md shadow ">
-                    <img class="rounded-t-md" src="images/digio.jpeg" alt="" />
+                    <img class="rounded-t-md" src="images/food_distri.png" alt="" />
                     <div class="p-5">
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
                             Food Distribution Web App
