--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <section class="bg-[#005bef] h-screen w-screen flex items-center justify-center" id="about">
     <div class="flex flex-col justify-center gap-2 md:gap-8 items-center py-8 px-4 mx-[5vw] xl:gap-16 md:grid md:grid-cols-2 sm:py-16">
         <div class="flex justify-center items-center align-middle" data-aos="fade-right" data-aos-duration="1500">
-            <img class="w-[15rem] sm:w-[15rem] md:w-10/12" src="images/heroImage.png" alt="dashboard image">
+            <img class="w-[15rem] sm:w-[15rem] md:w-10/12" src="images/profile1.png" alt="dashboard image">
         </div>
         <div data-aos="fade-right" data-aos-duration="1500" class="mt-4 md:mt-0">
             <h1 class="text-[#f4f4f4] text-center md:text-left text-[2.5rem] md:text-[3rem] lg:text-[6vw] tracking-tight font-extrabold">
@@ -95,8 +95,9 @@
                 Student at the University of Toronto
             </h3>
             <p class="text-[#f4f4f4] px-[2vw] md:px-0 text-justify mb-6 font-normal text-[0.6rem] md:text-[0.9rem] lg:text-[1.2vw]">
-                I am a driven and self-motivated individual who is interested in everything tech related, especially game development
-                and game design. I aspire to become a game developer/concept artist.
+                I am a highly driven and self-motivated individual with a profound passion for technology.
+                My goal is to combine my enthusiasm for innovation with my creative vision to make impactful
+                advancements in the field.
                 <br>
                 <br>
                 In my spare time, I enjoy solving programming problems in an efficient manner, learning about different programming
