--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </a>
             </div>
             <div class="flex justify-center items-center align-middle">
-                <img data-aos="fade-right" data-aos-duration="1500" class="w-[25rem] sm:w-[25rem] md:w-[50vw]" src="images/landingImage1.png" alt="profile image">
+                <img data-aos="fade-right" data-aos-duration="1500" class="w-[25rem] sm:w-[25rem] md:w-[50vw]" src="images/landingImage.png" alt="profile image">
             </div>
         </div>
     </div>
