--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body class="overflow-x-hidden">
 <!--Navbar-->
-<nav class="z-40 top-0 static border-gray-200">
+<nav class="z-40 top-0 absolute border-gray-200">
     <div class="flex flex-wrap items-center justify-end mx-[5vw] py-4 px-16 md:py-8">
         <div class="w-auto block" id="navbar-default">
             <ul class="font-medium text-md flex p-0 mt-0 flex-row md:space-x-8 md:text-xl md:border-0 md:bg-white">
@@ -57,7 +57,7 @@
 
 
 <!--Landing section-->
-<section class="relative">
+<section class="static">
 <!--    -mt-[7.5vw] md:-mt-[8vw]-->
     <div class="h-screen w-screen items-center flex justify-center">
         <div class="flex flex-col justify-center py-8 px-16 mx-[5vw] xl:gap-16 md:grid md:grid-cols-2">
